# DRO_Circuit

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  presentation.html  pyproject.toml
configs/: plan_a_ioi.yaml
docs/: README.md  mkdocs.yml
docs/docs/: architecture.md  getting-started.md  index.md
docs/research/experiments/: 2026-03-26_00-smoke-test.md  2026-03-26_01-erm-vs-dro-max.md  2026-03-26_01v2-normalized-dro.md  2026-03-27_02-seed-robustness.md  2026-03-28_03-aggregator-ablation.md  2026-03-28_04-local-vs-group-dro.md  2026-03-29_05-circuit-structure.md  2026-03-30_06-n-scaling.md  TEMPLATE.md
docs/research/reference/: experiment-setup.md
docs/user/: architecture.md  getting-started.md  index.md
dro_circuit/: __init__.py  config.py
dro_circuit/aggregation/: __init__.py  aggregators.py
dro_circuit/corruption/: __init__.py  base.py  ioi.py  registry.py
dro_circuit/data/: __init__.py  eap_adapter.py  multi_corrupt_dataset.py
dro_circuit/evaluation/: __init__.py  metrics.py  robust_evaluator.py
dro_circuit/scoring/: __init__.py  per_corruption_scorer.py  score_store.py
dro_circuit/scripts/: run.py  run_plan_a.py  run_plan_b.py
dro_circuit/selection/: __init__.py  gates.py  pipeline.py  plan_a.py  plan_b.py
dro_circuit/tasks/: __init__.py  ioi.py
experiments/: analyze_results.py  compare_naive_vs_dro.py  comprehensive_experiment.py  evaluate_faithfulness.py  evaluate_recovery.py  mixed_corruption_experiment.py  visualize_circuits.py
tests/: test_aggregation.py  test_config.py  test_data.py  test_gates.py  test_score_store.py
(+1 files in other folders)
